# solaredge-influxdb

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: python-package.yml
solaredge_influxdb/: __main__.py  app.py  config.toml
solaredge_influxdb/influxdb/: __init__.py  client.py
solaredge_influxdb/solaredge/: __init__.py  client.py  equipment.py  meters.py  models.py  site.py
tests/: test_app.py
tests/influxdb/: test_client.py
tests/integration_tests/: test_app.py  test_config.toml  test_influx.py
tests/solaredge/: test_client.py  test_site.py
