[tool.poetry]
name = "solaredge-influxdb"
version = "0.1.0"
description = "Ability to get data from the solar edge api into a influxdb"
authors = ["Yorick Fredrix <yorick.fredrix@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
influxdb-client = "^1.40.0"
pydantic = "^2.6.0"
loguru = "^0.7.2"
suntime = "^1.2.5"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
