[tool.poetry]
name = "solaredge-influxdb"
version = "1.3.0"
description = "Ability to get data from the solar edge api into a influxdb"
authors = ["Yorick Fredrix <yorick.fredrix@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
influxdb-client = "^1.40.0"
pydantic = "^2.6.1"
loguru = "^0.7.2"
suntime = "^1.2.5"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.0.1"
flake8 = "^7.0.0"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]

branch = "main"
upload_to_PyPI = false
upload_to_release = false
build_command = "pip install poetry && poetry build"
commit_author = "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
